style: fix login card position and spacing

--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -67,8 +67,8 @@
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     padding: 48px 48px;
     width: 100%;
-    max-width: 720px;
-    margin: 280px auto 0;
+    max-width: 652px;
+    margin: 230px auto 0;
     display: flex;
     flex-direction: column;
     align-items: center;
